--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "apollo-server-cache-redis": "^3.3.1",
     "apollo-server-express": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
